filip(feat): add homepage and footer with vercel deployment

--- a/docs/02-new-to-cardano/04-proof-of-stake.mdx
+++ b/docs/02-new-to-cardano/04-proof-of-stake.mdx
@@ -19,12 +19,12 @@ protocol
 [Ouroboros](https://iohk.io/en/blog/posts/2022/06/03/from-classic-to-chronos-the-implementations-of-ouroboros-explained/),
 and the first blockchain consensus protocol to be developed through
 peer-reviewed research. At the heart of the protocol are
-[stake pools](https://docs.cardano.org/core-concepts/stake-pools), reliable
-server nodes run by a stake pool operator to which ada holders can delegate
-their stake. Stake pools are used to ensure that everyone can participate in the
-protocol, regardless of technical experience or availability to keep a node
-running. These stake pools focus on maintenance and hold the combined stake of
-various stakeholders in a single entity.
+[stake pools](/learn/stake-pools), reliable server nodes run by a stake pool
+operator to which ada holders can delegate their stake. Stake pools are used to
+ensure that everyone can participate in the protocol, regardless of technical
+experience or availability to keep a node running. These stake pools focus on
+maintenance and hold the combined stake of various stakeholders in a single
+entity.
 
 ### How does proof of stake compare to proof of work protocols?
 
