--- a/docs/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
+++ b/docs/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/04-deploy-smart-contracts/02-setup-development.mdx
@@ -3,7 +3,8 @@ title: Set up development environment
 metaTitle: Set up development environment
 ---
 
-The EVM sidechain testnet is EVM-compatible with most Ethereum software to develop and deploy smart contracts including:
+The EVM sidechain testnet is EVM-compatible with most Ethereum software to
+develop and deploy smart contracts including:
 
 - [Remix](#remix)
 - [Hardhat](#hardhat)
@@ -11,33 +12,49 @@ The EVM sidechain testnet is EVM-compatible with most Ethereum software to devel
 
 ## Remix
 
-This tutorial will show you how to deploy a Solidity smart contract to the EVM sidechain testnet using Remix. [Remix](https://remix.ethereum.org/) is an online IDE to develop and deploy Solidity smart contracts.
+This tutorial will show you how to deploy a Solidity smart contract to the EVM
+sidechain testnet using Remix. [Remix](https://remix.ethereum.org/) is an online
+IDE to develop and deploy Solidity smart contracts.
 
 ### Prerequisites
 
-In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you have not done so already, [create or import an account with MetaMask](../../metamask) and fund your wallet with testnet tokens using the [SC_EVM Faucet](https://github.com/input-output-hk/sc-evm-faucet-web).
+In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you
+have not done so already,
+[create or import an account with MetaMask](../metamask) and fund your wallet
+with testnet tokens using the
+[SC_EVM Faucet](https://github.com/input-output-hk/sc-evm-faucet-web).
 
 ### Step 1 - Configure Remix
 
-- Visit the [Remix IDE](https://remix.ethereum.org/). The left-hand side has a menu [1] and a typical file explorer [2]. The ` Solidity Compiler` [3] and `Deploy and run transactions` [4] plugins should be active by default.
+- Visit the [Remix IDE](https://remix.ethereum.org/). The left-hand side has a
+  menu [1] and a typical file explorer [2]. The ` Solidity Compiler` [3] and
+  `Deploy and run transactions` [4] plugins should be active by default.
 
 ![remix-menu](https://user-images.githubusercontent.com/10556209/200480707-ec8b8e69-6cdc-498b-b315-c029fbc2a564.png)
 
-If the Solidity compiler and deploy plugins are not activated, you can search and activate them using the plugin manager [5] located in the bottom left of the screen.
+If the Solidity compiler and deploy plugins are not activated, you can search
+and activate them using the plugin manager [5] located in the bottom left of the
+screen.
 
 ![remix-plugin](https://user-images.githubusercontent.com/10556209/202550289-1cd1e25a-b1c9-4e66-9600-fad710126c8d.png)
 
-Open MetaMask and double-check the sidechain testnet is the selected network. This will ensure Remix connects to the correct network when you configure your environment in the next step.
+Open MetaMask and double-check the sidechain testnet is the selected network.
+This will ensure Remix connects to the correct network when you configure your
+environment in the next step.
 
 ![select-network](../../../images/sc-metamask-select-testnet.png)
 
-- In Remix, select the `Deploy and run transactions` plugin. Since you are using MetaMask as your Web3 provider, select 'Injected Provider' in the environment settings.
+- In Remix, select the `Deploy and run transactions` plugin. Since you are using
+  MetaMask as your Web3 provider, select 'Injected Provider' in the environment
+  settings.
 
 ### Step 2 - The smart contract
 
-With Remix configured to the sidechain testnet, you can move on to your smart contract development and deployment.
+With Remix configured to the sidechain testnet, you can move on to your smart
+contract development and deployment.
 
-- In the Remix file explorer, create an `erc20.sol` file in the `contracts/` directory and input the following Solidity statements:
+- In the Remix file explorer, create an `erc20.sol` file in the `contracts/`
+  directory and input the following Solidity statements:
 
 ```
 // SPDX-License-Identifier: UNLICENSED
@@ -52,7 +69,7 @@ import "https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contr
 * @title {Mintable ERC20 Token}
 */
 contract MintableERC20 is ERC20("Mintable Token", "MT"), Ownable {
-    /** 
+    /**
     * @dev See (ERC20 - _mint) function for details.
     *
     */
@@ -62,28 +79,40 @@ contract MintableERC20 is ERC20("Mintable Token", "MT"), Ownable {
 }
 ```
 
-This smart contract describes a mintable ERC20 token using the OpenZeppelin ERC20 contract libraries.
+This smart contract describes a mintable ERC20 token using the OpenZeppelin
+ERC20 contract libraries.
 
 ### Step 3 - Compile and deploy
 
-- Using the `Solidity compiler` plugin [1], select 'compile' the smart contract [2].
+- Using the `Solidity compiler` plugin [1], select 'compile' the smart contract
+  [2].
 
-When the contract is compiled, you can view contract ABI, Bytecode, and more information located in 'Compilation Details' [3].
+When the contract is compiled, you can view contract ABI, Bytecode, and more
+information located in 'Compilation Details' [3].
 
 ![compile-remix](https://user-images.githubusercontent.com/10556209/200576656-dad4c35d-02f7-40ce-8bd1-3e9f8497e302.png)
 
-- Then, select the `Deploy and run transactions` plugin > select 'Deploy' [1] and confirm any MetaMask prompts to sign the transaction. If the deployment is successful, the Remix console should return a green checkmark with expandable details [2]. The 'Deployed Contracts' panel will contain the contract address and generate a contract interface to test functions [3].
+- Then, select the `Deploy and run transactions` plugin > select 'Deploy' [1]
+  and confirm any MetaMask prompts to sign the transaction. If the deployment is
+  successful, the Remix console should return a green checkmark with expandable
+  details [2]. The 'Deployed Contracts' panel will contain the contract address
+  and generate a contract interface to test functions [3].
 
 ![deploy-remix](https://user-images.githubusercontent.com/10556209/201174327-6be015b2-9003-4f3c-8d70-f376dd1a3a9a.png)
 
 To verify that the smart contract was deployed on the sidechain testnet you can:
 
-- Search the transaction hash or contract address on a blockexplorer. To setup: https://github.com/input-output-hk/blockscout-open-source.
-- Open MetaMask and see if the contract deployment transaction was successfully signed.
+- Search the transaction hash or contract address on a blockexplorer. To setup:
+  https://github.com/input-output-hk/blockscout-open-source.
+- Open MetaMask and see if the contract deployment transaction was successfully
+  signed.
 - Check Remix logs for deployment details.
-  
+
 ## HardHat
-This tutorial will show you how to deploy a Solidity smart contract to the EVM sidechain testnet using Hardhat. [Hardhat](https://hardhat.org/) is a popular development environment for Ethereum software.
+
+This tutorial will show you how to deploy a Solidity smart contract to the EVM
+sidechain testnet using Hardhat. [Hardhat](https://hardhat.org/) is a popular
+development environment for Ethereum software.
 
 - [Node.js](https://nodejs.org/en/) version 14 or later.
 - [HardHat](https://hardhat.org/)
@@ -92,7 +121,8 @@ This tutorial will show you how to deploy a Solidity smart contract to the EVM s
 
 Hardhat is used in local NPM projects, so you will need NPM 7 or later.
 
-- Install Node.js version 15 or later using [NVM](https://github.com/nvm-sh/nvm):
+- Install Node.js version 15 or later using
+  [NVM](https://github.com/nvm-sh/nvm):
 
 ```
 $ nvm install 15 --lts
@@ -110,7 +140,9 @@ $ npm -v
 
 ### Step 1 - Create a Hardhat project
 
-This tutorial will create a new NPM project and initialize `npx hardhat` to bootstrap a sample JavaScript project and configure it to deploy to the sidechain testnet.
+This tutorial will create a new NPM project and initialize `npx hardhat` to
+bootstrap a sample JavaScript project and configure it to deploy to the
+sidechain testnet.
 
 - Create a new project:
 
@@ -126,7 +158,8 @@ $ npm init
 $ npm install --save-dev hardhat
 ```
 
-To create the sample JavaScript project, run `npx hardhat` in your project folder and select *Create a JavaScript project*.
+To create the sample JavaScript project, run `npx hardhat` in your project
+folder and select _Create a JavaScript project_.
 
 ```
 $ npx hardhat
@@ -150,7 +183,8 @@ $ npx hardhat
 
 ### Running tasks
 
-To view all options and commands with your Hardhat project, simply run `npx hardhat`:
+To view all options and commands with your Hardhat project, simply run
+`npx hardhat`:
 
 ```
 $ npx hardhat
@@ -162,14 +196,14 @@ GLOBAL OPTIONS:
 
   --config           	A Hardhat config file
   --emoji            	Use emoji in messages
-  --flamegraph       	Generate a flamegraph of your Hardhat tasks 
-  --help             	Shows this message, or a task's help if its name is provided 
+  --flamegraph       	Generate a flamegraph of your Hardhat tasks
+  --help             	Shows this message, or a task's help if its name is provided
   --max-memory       	The maximum amount of memory that Hardhat can use
   --network          	The network to connect to
   --show-stack-traces	Show stack traces (always enabled on CI servers)
   --tsconfig         	A TypeScript config file
-  --typecheck        	Enable TypeScript type-checking of your scripts/tests 
-  --verbose          	Enables Hardhat verbose logging 
+  --typecheck        	Enable TypeScript type-checking of your scripts/tests
+  --verbose          	Enables Hardhat verbose logging
   --version          	Shows hardhat's version
 
 
@@ -181,7 +215,7 @@ AVAILABLE TASKS:
   console           	Opens a Hardhat console
   coverage          	Generates a code coverage report for tests
   flatten           	Flattens and prints contracts and their dependencies
-  gas-reporter:merge	
+  gas-reporter:merge
   help              	Prints this message
   node              	Starts a JSON-RPC server on top of the Hardhat network
   run               	Runs a user-defined script after compiling the project
@@ -192,11 +226,15 @@ AVAILABLE TASKS:
 To get help for a specific task run: npx hardhat help [task]
 ```
 
-If you need additional information on using Hardhat, see official [Hardhat documentation](https://hardhat.org/getting-started/).
+If you need additional information on using Hardhat, see official
+[Hardhat documentation](https://hardhat.org/getting-started/).
 
 ### Step 2 - Configure Hardhat
 
-Our sample JavaScript project contains a `hardhat.config.js` file. The `networks` config field is an optional object where network names map to their configuration and we can set `accounts` we want to sign transactions. For example:
+Our sample JavaScript project contains a `hardhat.config.js` file. The
+`networks` config field is an optional object where network names map to their
+configuration and we can set `accounts` we want to sign transactions. For
+example:
 
 ```js
 require("@nomicfoundation/hardhat-toolbox");
@@ -219,22 +257,25 @@ module.exports = {
 
 ### Step 3 - Compile and deploy
 
-- To compile Solidity files in the `contracts/` directory of your Hardhat project execute `npx hardhat compile`:
+- To compile Solidity files in the `contracts/` directory of your Hardhat
+  project execute `npx hardhat compile`:
 
 ```
 $ npx hardhat compile
 ```
 
-Deploying with Hardhat utilizes deployment scripts located in `scripts/`. 
+Deploying with Hardhat utilizes deployment scripts located in `scripts/`.
 
-- To deploy with Hardhat, execute the deploy script with `evm-sidechain` as the network option.
+- To deploy with Hardhat, execute the deploy script with `evm-sidechain` as the
+  network option.
 
 ```
 $ npx hardhat run scripts/deploy.js --network evm-sidechain
 Greeter deployed to: 0x95E1C8F6C00d8cB518faBA33c8Ae814fc12E3090
 ```
 
-🎉 Hurray! You deployed your smart contract to EVM sidechain testnet and can verify deployment by querying the transaction:
+🎉 Hurray! You deployed your smart contract to EVM sidechain testnet and can
+verify deployment by querying the transaction:
 
 ```
 curl -H "Content-Type: application/json" -X POST --data \
@@ -243,7 +284,9 @@ curl -H "Content-Type: application/json" -X POST --data \
 
 ## Truffle
 
-This tutorial will show you how to deploy a Solidity smart contract to the EVM sidechain testnet using Truffle. [Truffle](https://trufflesuite.com/truffle/) is a popular development framework for EVM-based applications.
+This tutorial will show you how to deploy a Solidity smart contract to the EVM
+sidechain testnet using Truffle. [Truffle](https://trufflesuite.com/truffle/) is
+a popular development framework for EVM-based applications.
 
 ### Prerequisites
 
@@ -268,9 +311,12 @@ $ truffle version
 
 ### Step 1 - Configure Truffle
 
-You need to create a Truffle project before configuring Truffle to deploy on the EVM sidechain testnet. This demonstration will use the [React Truffle Box](https://trufflesuite.com/boxes/react/).
+You need to create a Truffle project before configuring Truffle to deploy on the
+EVM sidechain testnet. This demonstration will use the
+[React Truffle Box](https://trufflesuite.com/boxes/react/).
 
-- Create a new project directory for your Truffle project and unbox the React Truffle Box:
+- Create a new project directory for your Truffle project and unbox the React
+  Truffle Box:
 
 ```
 $ mkdir React-Truffle
@@ -278,17 +324,22 @@ $ cd React-Truffle
 $ truffle unbox react
 ```
 
-- Configure Truffle to use the EVM sidechain testnet by adding the following in `React-Truffle/truffle/truffle-config.js` > Line 45. Remove the comment on Line 25.
+- Configure Truffle to use the EVM sidechain testnet by adding the following in
+  `React-Truffle/truffle/truffle-config.js` > Line 45. Remove the comment on
+  Line 25.
 - Replace `YOUR_SEED_PHRASE` with your mnemonic phrase.
 
 ### Step 2 - Truffle Migrate
 
-At this point, you've defined the EVM sidechain testnet and your testnet account to sign smart contract deployments. You are now ready to deploy!
+At this point, you've defined the EVM sidechain testnet and your testnet account
+to sign smart contract deployments. You are now ready to deploy!
 
-- Within the `truffle/` directory of our project, execute `truffle migrate` while passing `evm-sidechain` for the `--network` parameter:
+- Within the `truffle/` directory of our project, execute `truffle migrate`
+  while passing `evm-sidechain` for the `--network` parameter:
 
 ```
 $ truffle migrate --network evm-sidechain
 ```
 
-Upon executing `truffle migrate`, Truffle will return the transaction hash and contract address which can be queryed on the EVM sidechain.
+Upon executing `truffle migrate`, Truffle will return the transaction hash and
+contract address which can be queryed on the EVM sidechain.
