--- a/docs/03-learn/06-pledging-and-delegation-options.mdx
+++ b/docs/03-learn/06-pledging-and-delegation-options.mdx
@@ -3,11 +3,11 @@ title: Pledging and delegation options
 metaTitle: Pledging and delegation options
 ---
 
-Ada held on the [Cardano network](https://cardano.org/) represents a user’s stake in the
-protocol, the size of which is proportional to the amount of ada held. Users who
-hold a stake in Cardano can earn passive rewards for validating blocks. The
-amount of rewards they can earn is proportional to the amount of ada they pledge
-or delegate to a stake pool.
+Ada held on the [Cardano network](https://cardano.org/) represents a user’s
+stake in the protocol, the size of which is proportional to the amount of ada
+held. Users who hold a stake in Cardano can earn passive rewards for validating
+blocks. The amount of rewards they can earn is proportional to the amount of ada
+they pledge or delegate to a stake pool.
 
 There are three options ada holders can consider for delegating their stake:
 
@@ -15,44 +15,48 @@ There are three options ada holders can consider for delegating their stake:
 2. Agree with a third party to run a private stake pool for them
 3. Delegate to other stake pools
 
-To create and register a stake pool, see [these instructions](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/8_register_stakepool.md).
+To create and register a stake pool, see
+[these instructions](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/8_register_stakepool.md).
 
 Stake pools must maintain **high-availability**, which means that they should
-*always* be online and available to validate and create new blocks. The rewards a
-stake pool can earn are directly proportional to the amount of ada that is
+_always_ be online and available to validate and create new blocks. The rewards
+a stake pool can earn are directly proportional to the amount of ada that is
 pledged or delegated, and the number of blocks the stake pool can create in a
-given epoch. Ouroboros
-elects the slot leader that grants the permissions to validate transactions and create new
-blocks, based on the above criteria.
+given epoch. Ouroboros elects the slot leader that grants the permissions to
+validate transactions and create new blocks, based on the above criteria.
 
-> Note: It is **strongly recommended** to test all stake pool functionality on the
-> [testnet](https://testnets.cardano.org/en/testnets/cardano/overview/) *prior* to any mainnet deployment.
+> Note: It is **strongly recommended** to test all stake pool functionality on
+> the [testnet](https://testnets.cardano.org/en/testnets/cardano/overview/) >
+> _prior_ to any mainnet deployment.
 
 ### Pledging
 
 The pledge is the amount of ada that the stake pool operator ‘delegates’ to
-their own pool when it is created. This pledge represents the operator's commitment
-to maintain their pool and support network activity. Making a pledge is
-not required, however, it is recommended to pledge *some* ada to the stake pool
-prior to running it. The more ada that is pledged, the higher the pool rewards,
-which are dependent on the pool’s level of uptime and its performance.
+their own pool when it is created. This pledge represents the operator's
+commitment to maintain their pool and support network activity. Making a pledge
+is not required, however, it is recommended to pledge _some_ ada to the stake
+pool prior to running it. The more ada that is pledged, the higher the pool
+rewards, which are dependent on the pool’s level of uptime and its performance.
 
 > **Related topics:**
-> -   [Pledging and rewards](/core-concepts/pledging-rewards)
+>
+> - [Pledging and rewards](/learn/pledging-rewards)
 
 ### Delegation
 
 Ada holders who do not have technical expertise in maintaining a stake pool can
 earn rewards by delegating to any stake pool available on the network. The
-[Daedalus wallet](https://docs.cardano.org/cardano-components/daedalus-wallet) provides a user-friendly interface that allows users
-to start delegating to any registered stake pool.
+[Daedalus wallet](https://docs.cardano.org/cardano-components/daedalus-wallet)
+provides a user-friendly interface that allows users to start delegating to any
+registered stake pool.
 
-> Note: ada holders and stake pool operators (SPOs) who pledge or delegate will always have access to
-> their ada. If the delegated ada is spent or removed from the pool, the rewards
-> decrease accordingly.
+> Note: ada holders and stake pool operators (SPOs) who pledge or delegate will
+> always have access to their ada. If the delegated ada is spent or removed from
+> the pool, the rewards decrease accordingly.
 
 > **Related topics:**
-> -   [Registering a stake pool](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/8_register_stakepool.md)
+>
+> - [Registering a stake pool](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/8_register_stakepool.md)
 
 > **Further reading:**
 >
@@ -67,7 +71,8 @@ designed to be decentralized, which means that there is no single controlling
 party.
 
 > **Related documentation:**
-> -   [Withdrawing rewards](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/11_withdraw-rewards.md) 
+>
+> - [Withdrawing rewards](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/11_withdraw-rewards.md)
 
 ### FAQs
 
