--- a/docs/04-explore-cardano/01-cardano-design-rationale.mdx
+++ b/docs/04-explore-cardano/01-cardano-design-rationale.mdx
@@ -3,11 +3,12 @@ title: Design rationale
 metaTitle: Cardano design rationale
 ---
 
-[Cardano](https://cardano.org/) has been built as a resilient and sustainable blockchain using the core
-principles of security, scalability, and interoperability. Fundamentally, it was
-designed as a [proof-of-stake](https://docs.cardano.org/new-to-cardano/proof-of-stake) system, which means it is undoubtedly more
-efficient, by orders of magnitude, than proof of work. Crucially, our
-ground-breaking proof-of-stake consensus protocol
+[Cardano](https://cardano.org/) has been built as a resilient and sustainable
+blockchain using the core principles of security, scalability, and
+interoperability. Fundamentally, it was designed as a
+[proof-of-stake](https://docs.cardano.org/new-to-cardano/proof-of-stake) system,
+which means it is undoubtedly more efficient, by orders of magnitude, than proof
+of work. Crucially, our ground-breaking proof-of-stake consensus protocol
 [Ouroboros](https://iohk.io/en/blog/posts/2020/06/23/the-ouroboros-path-to-decentralization/)
 is proven to have the same security guarantees that proof of work has.
 
@@ -17,14 +18,14 @@ confidence to users for the management of digital funds. Cardano has been built
 using formal methods to get strong guarantees on the functional correctness of
 core components of the system.
 
-Security is one of the founding principles of our blockchain. Cardano is written in Haskell,
-a secure functional programming language that
-encourages building a system using pure functions. This leads to a design where
-components are conveniently testable in isolation. Furthermore, advanced
-features of Haskell enable us to employ a whole range of powerful methods for
-ensuring code correctness, such as basing the implementation on formal
-and executable specifications, extensive property-based testing, and running
-tests in simulation.
+Security is one of the founding principles of our blockchain. Cardano is written
+in Haskell, a secure functional programming language that encourages building a
+system using pure functions. This leads to a design where components are
+conveniently testable in isolation. Furthermore, advanced features of Haskell
+enable us to employ a whole range of powerful methods for ensuring code
+correctness, such as basing the implementation on formal and executable
+specifications, extensive property-based testing, and running tests in
+simulation.
 
 For Cardano to deliver a resilient infrastructure on a global scale, it needs to
 be able to scale on par with legacy financial systems. Even though we have
@@ -44,18 +45,18 @@ open environment.
 
 Another major aim in the design of Cardano is to reduce centralization while
 actively working against economic incentives that would drive the system towards
-centralization. As soon as you have [stake pools](https://docs.cardano.org/core-concepts/stake-pools), you have an economic incentive
-for these pools to grow, so it was important to make it less attractive for a
-stake pool to become too big. It is more cost-efficient to have a small number
-of large pools, than a large number of small pools. Cardano was designed to work
-against the economic incentive where large pools dominate the system, by making
-it less attractive for a pool to become too big. This was achieved by changing
-the reward formula. In a naive system, the total rewards for a pool would be
-proportional to its stake, so the bigger it gets, the better. In Cardano, if a
-pool attracts more stake than a certain threshold (1/k, where k is a
-configurable parameter), its reward will no longer increase. So, if everyone
-acts in their own self-interest to maximize their rewards, you expect _k_ pools
-of roughly equal size.
+centralization. As soon as you have [stake pools](/learn/stake-pools), you have
+an economic incentive for these pools to grow, so it was important to make it
+less attractive for a stake pool to become too big. It is more cost-efficient to
+have a small number of large pools, than a large number of small pools. Cardano
+was designed to work against the economic incentive where large pools dominate
+the system, by making it less attractive for a pool to become too big. This was
+achieved by changing the reward formula. In a naive system, the total rewards
+for a pool would be proportional to its stake, so the bigger it gets, the
+better. In Cardano, if a pool attracts more stake than a certain threshold (1/k,
+where k is a configurable parameter), its reward will no longer increase. So, if
+everyone acts in their own self-interest to maximize their rewards, you expect
+_k_ pools of roughly equal size.
 
 The ability to interact with other systems, or interoperability, is a
 fundamental design feature of Cardano. One of the current design innovations in
