--- a/docs/07-operating-a-stake-pool/02-about-stake-pools.mdx
+++ b/docs/07-operating-a-stake-pool/02-about-stake-pools.mdx
@@ -6,20 +6,37 @@ metaTitle: About stake pools, operators, and owners
 This section includes an overview of stake pool operations and explains the ways
 of creating and managing your own stake pool.
 
-A [stake pool](/core-concepts/stake-pools) is a reliable server node that holds and maintains the combined stake of various stakeholders in a single entity. Stake pools use the [Cardano node](https://docs.cardano.org/learn/cardano-node/) to validate how the pool interacts with the network and are responsible for transaction processing and block production.
+A [stake pool](/learn/stake-pools) is a reliable server node that holds and
+maintains the combined stake of various stakeholders in a single entity. Stake
+pools use the [Cardano node](https://docs.cardano.org/learn/cardano-node/) to
+validate how the pool interacts with the network and are responsible for
+transaction processing and block production.
 
 Successfully operating a stake pool includes the roles of a stake pool operator
 and one or more stake pool owner(s). It is important to note that there is a
 conceptual difference between these two roles:
 
--   A *stake pool operator* is a person who is assigned responsibility for setting up and keeping the stake pool running, which means that they own or rent a server, hold the key of the stake pool, and hold responsibility for running and monitoring the node. With their key, a stake pool operator can sign blocks, register, re-register, or retire a stake pool, and post updated certificates. A stake pool operator is also empowered to exclude some stake pool owners during re-registration.
--   A *stake pool owner* is a person who pledges their stake to the pool to increase the pool’s reward earning capacity and desirability. The ability of the owner to [pledge stake](/core-concepts/pledging-rewards) provides protection against Sybil attacks.
-   
-Usually, the stake pool operator and the owner is the same person, however, a stake pool can also have multiple owners, who pledge their stake to form one larger pool to ensure it is competitive. Even in this case, there is still only one stake pool operator who is responsible for stake pool processes.
+- A _stake pool operator_ is a person who is assigned responsibility for setting
+  up and keeping the stake pool running, which means that they own or rent a
+  server, hold the key of the stake pool, and hold responsibility for running
+  and monitoring the node. With their key, a stake pool operator can sign
+  blocks, register, re-register, or retire a stake pool, and post updated
+  certificates. A stake pool operator is also empowered to exclude some stake
+  pool owners during re-registration.
+- A _stake pool owner_ is a person who pledges their stake to the pool to
+  increase the pool’s reward earning capacity and desirability. The ability of
+  the owner to [pledge stake](/learn/pledging-rewards) provides protection
+  against Sybil attacks.
+
+Usually, the stake pool operator and the owner is the same person, however, a
+stake pool can also have multiple owners, who pledge their stake to form one
+larger pool to ensure it is competitive. Even in this case, there is still only
+one stake pool operator who is responsible for stake pool processes.
 
 It is essential that all stake pool owners trust a stake pool operator. All
 operators’ and owners’ rewards are paid out into a single shared reward account
-associated with the reward address of the pool. The holder of the rewards account pays out rewards independently to the owners. 
+associated with the reward address of the pool. The holder of the rewards
+account pays out rewards independently to the owners.
 
 This makes it clear to all parties that an agreement is needed to define when
 and how the accumulated rewards in a shared account should be split. For
@@ -33,4 +50,4 @@ potential rewards, or reputation for the operator.
 _Note, that to eliminate such a case, it is beneficial for owners and operators
 to consider entering into contractual arrangements._
 
-Read the following sections to find out how to set up and operate a stake pool. 
+Read the following sections to find out how to set up and operate a stake pool.
