--- a/docs/08-cardano-components/12-cardano-explorer.mdx
+++ b/docs/08-cardano-components/12-cardano-explorer.mdx
@@ -6,12 +6,15 @@ metaTitle: Cardano Explorer
 import { OpenInNew } from 'styled-icons/material/OpenInNew'
 import { Link } from '@styled-icons/material/Link'
 
-<Iframe tall>
-  <iframe
-    src="https://explorer.cardano.org/en"
-    width="1600"
-    height="900"
-  ></iframe>
-</Iframe>
+{/* <Iframe tall> */}
+
+{' '}
+
+<iframe
+  src="https://explorer.cardano.org/en"
+  width="1600"
+  height="900"
+></iframe>
+{/* </Iframe> */}
 
 [<Link primary>View in Browser <OpenInNew /></Link>](https://explorer.cardano.org/en)
