--- a/content/15-tools/03-comp-matrix.mdx
+++ b/content/15-tools/03-comp-matrix.mdx
@@ -5,12 +5,13 @@ metaTitle: Compatibility matrix
 
 ## Component compatibility with the Cardano node
 
-This Cardano components compatibility matrix shows the runtime Cardano component dependencies on a particular version of [cardano-node](https://github.com/input-output-hk/cardano-node/releases). (It does not reflect any stacks.) The compatibility matrix should be read in conjunction with the Cardano component dependencies definition.
+This Cardano components compatibility matrix shows the runtime Cardano component dependencies on a particular version of [cardano-node](https://github.com/input-output-hk/cardano-node/releases). It does not reflect any stacks. The compatibility matrix should be read in conjunction with the Cardano component dependencies definition.
 
 If you only require using the node, we recommend the latest node version. However, if you need to use all the compatible components, we recommend using version [1.35.7](https://github.com/input-output-hk/cardano-node/releases/tag/1.35.7).
 
 | [Cardano Node](https://github.com/input-output-hk/cardano-node/releases) | [Cardano DB Sync](https://github.com/input-output-hk/cardano-db-sync/releases) | [Smash](https://github.com/input-output-hk/smash/releases) | [Cardano Rosetta Server](https://github.com/input-output-hk/cardano-rosetta/releases) | [Cardano GraphQL](https://github.com/input-output-hk/cardano-graphql/releases) | [Cardano Explorer](https://github.com/input-output-hk/cardano-explorer-app/releases) | [Cardano Wallet](https://github.com/input-output-hk/cardano-wallet/releases) | 
 |---|---|---|---|---|---|---|
+| __[8.9.0](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.0)__ (bug fix) |TBD|TBD|TBD|TBD|TBD|TBD|
 | __[8.7.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.3)__ (minor bug fix) |TBD|TBD|TBD|TBD|TBD|TBD|
 | __[8.7.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.7.2)__ (major update) |TBD|TBD|TBD|TBD|TBD|TBD|
 | __[8.1.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.1.2)__ (minor update) |TBD|TBD|TBD|TBD|TBD|TBD|
