--- a/content/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
+++ b/content/07-operating-a-stake-pool/01-stake-pool-operations-101.mdx
@@ -6,9 +6,9 @@ Welcome to your one-stop shop for all things related to stake pool operations!
 
 This page helps you navigate through the technical information, resources, and updates needed to manage your pool/s operations efficiently, whether you're an experienced operator or just starting out.
 
-Last updated on: January 10, 2024
+Last updated on: March 13, 2024
 
-Current node version: [v.8.7.3](https://github.com/IntersectMBO/cardano-node/releases/tag/8.7.3)  
+Current node version: [v.8.9.0](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.0)  
 [Release notes](https://docs.cardano.org/tools/release-notes/)  
 [Compatibility matrix](https://docs.cardano.org/tools/comp-matrix/)  
 
@@ -16,7 +16,7 @@ Access the [cardano-node](https://github.com/input-output-hk/cardano-node#overvi
 
 ## Latest node details
 
-Cardano node v.8.7.3 addresses a minor fix in the `ouroboros-network`. It resolves an issue in the `outbound-governor` where, under rare but reproducible conditions, it could lose track of certain outbound connections, such as a local root or another node.
+Cardano node v.8.9.0 introduces [Genesis Lite bootstrap peers](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/getting-started/understanding-config-files.md#genesis-lite-aka-bootstrap-peers). This version also fixes a small bug in the dynamic block forging logic and includes some overall improvements.
 
 ## Overview of Cardano environments
 ### Preview
