filip(fix): link fixes

--- a/docs/04-explore-cardano/04-cardano-network/02-networking-protocol.mdx
+++ b/docs/04-explore-cardano/04-cardano-network/02-networking-protocol.mdx
@@ -38,8 +38,8 @@ following tasks:
 
 The multiplexing layer acts as a central crossing between mini-protocols and the
 network channel. It runs several
-[mini-protocols](/explore-cardano/cardano-network/about-the-cardano-network/#utilizingmini-protocols)
-in parallel in a single channel ‒ TCP connection, for example.
+[mini-protocols](/explore-cardano/cardano-network#utilizingmini-protocols) in
+parallel in a single channel ‒ TCP connection, for example.
 
 Figure 1 reflects how data flows between two nodes, each running three
 mini-protocols using a multiplexer (MUX) and a de-multiplexer (DEMUX).
