--- a/docs/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/05-sidechain-token.mdx
+++ b/docs/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/05-sidechain-token.mdx
@@ -5,22 +5,36 @@ metaTitle: SC_Token and test ada
 
 ## What is SC_Token?
 
-**SC_Token<sup>1</sup>** is the native token of the proof of concept EVM sidechain testnet. `SC_Token` can be moved between the main chain (Cardano) and the EVM sidechain, and `SC_Token` is required to pay for gas. Test `SC_Token` carries no real-world value.
+**SC_Token<sup>1</sup>** is the native token of the proof of concept EVM
+sidechain testnet. `SC_Token` can be moved between the main chain (Cardano) and
+the EVM sidechain, and `SC_Token` is required to pay for gas. Test `SC_Token`
+carries no real-world value.
 
 ### What is gas?
 
-**Gas** refers to the computational cost necessary to successfully conduct a transaction on the sidechain network. This gas is deducted from a small fraction of `SC_Token` when conducting a transaction, deploying a smart contract, or writing to a smart contract.
+**Gas** refers to the computational cost necessary to successfully conduct a
+transaction on the sidechain network. This gas is deducted from a small fraction
+of `SC_Token` when conducting a transaction, deploying a smart contract, or
+writing to a smart contract.
 
 ### How to get SC_Token?
 
-IOG has an open-source faucet at https://github.com/input-output-hk/sc-evm-faucet-web for testing purposes. The faucet dispenses test SC_Token that you can use to pay the gas fees on smart contracts that you run on the EVM sidechain testnet. You cannot swap the test SC_Token tokens you claim from the faucet for any other token, nor can you use them to make any purchases. 
+IOG has an open-source faucet at
+https://github.com/input-output-hk/sc-evm-faucet-web for testing purposes. The
+faucet dispenses test SC_Token that you can use to pay the gas fees on smart
+contracts that you run on the EVM sidechain testnet. You cannot swap the test
+SC_Token tokens you claim from the faucet for any other token, nor can you use
+them to make any purchases.
 
 ## What is test ada?
 
-Test ada (`tAda`) is the native token of Cardano testnets. `tAda` is required to pay for transaction fees conducted on a Cardano testnet. `tAda` carries no real world value.
+Test ada (`tAda`) is the native token of Cardano testnets. `tAda` is required to
+pay for transaction fees conducted on a Cardano testnet. `tAda` carries no real
+world value.
 
-### How to get tAda? 
+### How to get tAda?
 
-Request test ada using a public Cardano testnet faucet: https://docs.cardano.org/cardano-testnet/tools/faucet/
-  
+Request test ada using a public Cardano testnet faucet:
+https://docs.cardano.org/cardano-testnets/tools/faucet/
+
 <sup>1</sup> Temporary name
