--- a/docs/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/02-create-and-fund-accounts.mdx
+++ b/docs/09-cardano-sidechains/03-proof-of-concept-evm-sidechain/02-create-and-fund-accounts.mdx
@@ -9,14 +9,17 @@ metaTitle: Create and fund accounts
 
 ## How to fund your main chain account with testnet ada tokens
 
-In this tutorial, you will learn how to claim test ada tokens on the main chain testnet (to pay for main chain transaction fees).
+In this tutorial, you will learn how to claim test ada tokens on the main chain
+testnet (to pay for main chain transaction fees).
 
-*Note: This is a dedicated Cardano testnet separate from the preview and pre-production testing environments.*
+_Note: This is a dedicated Cardano testnet separate from the preview and
+pre-production testing environments._
 
 ### Generating keys
 
-To generate keys for the Cardano testnet you need the `cardano-cli` [binary](https://github.com/input-output-hk/cardano-node/releases/).
-Open a shell and run the following commands:
+To generate keys for the Cardano testnet you need the `cardano-cli`
+[binary](https://github.com/input-output-hk/cardano-node/releases/). Open a
+shell and run the following commands:
 
 ```shell
 # Set network name
@@ -34,14 +37,18 @@ cardano-cli address build \
  export MC_ADDR=$(cat payment.addr)
 ```
 
-These steps are based on this [keys and adresses creation tutorial](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/3_keys_and_addresses.md).
+These steps are based on this
+[keys and adresses creation tutorial](https://github.com/input-output-hk/cardano-node-wiki/blob/main/docs/stake-pool-operations/3_keys_and_addresses.md).
 
-Request test ada using a public Cardano testnet faucet: https://docs.cardano.org/cardano-testnet/tools/faucet/
+Request test ada using a public Cardano testnet faucet:
+https://docs.cardano.org/cardano-testnets/tools/faucet/
 
 ### Funding your sidechain account with test SC_token
 
-Create a sidechain account using a compatible Web3 wallet connected to the EVM sidechain test network (eg MetaMask).
+Create a sidechain account using a compatible Web3 wallet connected to the EVM
+sidechain test network (eg MetaMask).
 
 - [Working with MetaMask](/cardano-sidechains/proof-of-concept-evm-sidechain/metamask/).
 
-Request test `SC_Token` using the web-app: https://github.com/input-output-hk/sc-evm-faucet-web
+Request test `SC_Token` using the web-app:
+https://github.com/input-output-hk/sc-evm-faucet-web
