--- a/docs/02-new-to-cardano/index.mdx
+++ b/docs/02-new-to-cardano/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: New To Cardano
-metaTitle: New To Cardano
+title: New to Cardano?
+metaTitle: New to Cardano?
 sidebar_position: 2
 ---
 
