--- a/docs/04-explore-cardano/04-cardano-network/index.mdx
+++ b/docs/04-explore-cardano/04-cardano-network/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Cardano Network
-metaTitle: Cardano Network
+title: Cardano network
+metaTitle: Cardano network
 sidebar_position: 4
 collapsible: true
 collapsed: true
