--- a/docs/05-cardano-testnets/index.mdx
+++ b/docs/05-cardano-testnets/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Cardano Testnets
-metaTitle: Cardano Testnets
+title: Cardano testnets
+metaTitle: Cardano testnets
 sidebar_position: 4
 collapsible: true
 collapsed: true
