--- a/docs/06-development-guidelines/07-transaction-tutorials/index.mdx
+++ b/docs/06-development-guidelines/07-transaction-tutorials/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Transaction Tutorials
-metaTitle: Transaction Tutorials
+title: Transaction tutorials
+metaTitle: Transaction tutorials
 sidebar_position: 7
 collapsible: true
 collapsed: true
