--- a/docs/09-cardano-sidechains/02-sidechain-toolkit/index.mdx
+++ b/docs/09-cardano-sidechains/02-sidechain-toolkit/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Sidechain Toolkit
-metaTitle: Sidechain Toolkit
+title: Sidechain toolkit
+metaTitle: Sidechain toolkit
 sidebar_position: 2
 collapsible: true
 collapsed: true
@@ -8,7 +8,7 @@ collapsed: true
 
 ![sidechain-toolkit-environment-pic](https://user-images.githubusercontent.com/10556209/204818497-7c27e2fb-46c3-41fd-bf60-a47b0926ad9b.png)
 
-The Sidechain Toolkit is a set of components and recommendations to extend
+The *sidechain toolkit* is a set of components and recommendations to extend
 Cardano. The toolkit allows blockchain developers to deploy customizable
 solutions that fit their technical and social needs. The toolkit is composed of
 three main components:
