--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -7,15 +7,14 @@ sidebar_position: 1
 
 Welcome to the central hub for Cardano documentation. Here you will find content
 that describes and supports the features on Cardano mainnet and
-[Cardano testnet environments](https://docs.cardano.org/cardano-testnet/overview).
+Cardano testnet environments.
 
 This includes explainers, information on all the core components of Cardano,
 details of how Cardano was designed and its architecture, how the Cardano
 network works, explanations of the fee structure and monetary policy, release
-notes, a compatibility matrix, a glossary of terms, as well as community
-resources. There is also content to support native tokens and references to
-[Plutus](https://docs.cardano.org/smart-contracts/plutus/plutus-resources/) and
-Marlowe material.  
+notes, a compatibility matrix, and more. There is also content to support native tokens and references to
+smart contracts material.  
+
 If you are interested in building tools on Cardano, integrating with Cardano,
 and connecting with the wider developer community, please visit the
 [Cardano Developer Portal](https://developers.cardano.org/home/).
