--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -5,21 +5,15 @@ metaDescription: 'Introduction'
 sidebar_position: 1
 ---
 
-Welcome to the central hub for Cardano documentation. Here you will find content
-that describes and supports the features on Cardano mainnet and
-Cardano testnet environments.
+Welcome to the central hub for Cardano documentation. Here, you'll find content that describes and supports the features on both the Cardano mainnet and testnet environments.
 
-This includes explainers, information on all the core components of Cardano,
-details of how Cardano was designed and its architecture, how the Cardano
-network works, explanations of the fee structure and monetary policy, release
-notes, a compatibility matrix, and more. There is also content to support native tokens and references to
-smart contracts material.  
+This includes basic explainers for newcomers to Cardano, explanations of the core features, details about Cardano's design and evolution, insights into how the Cardano network operates, and platform architecture. You can also access developer resources that explain the core concepts and provide links to developer documentation for more technical tutorials.  
 
 If you are interested in building tools on Cardano, integrating with Cardano,
 and connecting with the wider developer community, please visit the
 [Cardano Developer Portal](https://developers.cardano.org/home/).
 
-**Cardano explained**
+## Cardano explained
 
 Cardano is a decentralized third-generation proof-of-stake blockchain platform
 and home to the ada cryptocurrency. It is the first blockchain platform to
@@ -38,19 +32,13 @@ Cardano has been designed with security as one of its founding principles. It is
 written in Haskell, a functional programming language. In a functional language
 like Haskell, building your system using pure functions is encouraged, which
 leads to a design where components are conveniently testable in isolation.
-Furthermore, advanced features of Haskell enable us to employ a whole range of
-powerful methods for ensuring correctness of the code, such as basing the
+Furthermore, advanced features of Haskell enable employing a whole range of
+powerful methods for ensuring the correctness of the code, such as basing the
 implementation on formal and executable specifications, extensive property-based
 testing, and running tests in simulation.
 
-Cardano is developing a smart contract platform which seeks to deliver more
+Cardano's smart contract platform seeks to deliver more
 advanced features than any protocol previously developed and will serve as a
-stable and secure platform for the development of enterprise-level dApps. In the
-near future, Cardano will use a democratic governance system that allows the
-project to evolve over time, and fund itself in a sustainable way through a
-visionary treasury system.
+stable and secure platform for the development of enterprise-level DApps. Cardano's democratic governance system, implemented based on [CIP-1694](https://cips.cardano.org/cip/CIP-1694) on-chain governance mechanisms, will enable the project to evolve over time and sustainably fund itself through a visionary treasury system.
 
-You can read more about Cardano on the
-[official Cardano website](https://cardano.org/) and watch a summary of the
-mission of Cardano in this
-[explainer video](https://www.youtube.com/watch?v=l_Nv0-PVrnM/).
+You can read more about Cardano on the [official Cardano website](https://cardano.org/) and watch a summary of Cardano's mission in this [explainer video](https://www.youtube.com/watch?v=l_Nv0-PVrnM/).
