--- a/docs/02-new-to-cardano/index.mdx
+++ b/docs/02-new-to-cardano/index.mdx
@@ -8,7 +8,7 @@ The understanding of basic concepts plays an integral role in getting acquainted
 with blockchain and [Cardano](https://cardano.org/) in particular. In this
 section, we start our journey with basic concepts such as the notion of
 blockchain, understanding
-[consensus](https://docs.cardano.org/learn/consensus-explained), and what is a
+consensus, and what is a
 cryptocurrency. You will also find out how Cardano differs from other existing
 solutions, learn how to track blockchain activities, and understand why smart
 contracts matter. If you are new to Cardano, you will also find out information
