--- a/docs/02-new-to-cardano/03-why-use-cardano.mdx
+++ b/docs/02-new-to-cardano/03-why-use-cardano.mdx
@@ -3,7 +3,7 @@ title: Why use Cardano?
 metaTitle: Why use Cardano?
 ---
 
-[Cardano](https://cardano.org/) is an open source [proof-of-stake]((/new-to-cardano/proof-of-stake)) blockchain project that began in 2015
+[Cardano](https://cardano.org/) is an open source [proof-of-stake](/new-to-cardano/proof-of-stake) blockchain project that began in 2015
 to address existing blockchain challenges in the design and development of
 cryptocurrencies. It aims to provide a more balanced and sustainable ecosystem
 that better accounts for the needs of its users as well as other systems seeking
