--- a/docs/02-new-to-cardano/03-why-use-cardano.mdx
+++ b/docs/02-new-to-cardano/03-why-use-cardano.mdx
@@ -85,7 +85,7 @@ To address these needs, Cardano focuses on such core concepts as:
   rules and changes would be implemented, and the chain would restart – with its
   previous history being erased. Cardano handles hard forks differently. Instead
   of implementing radical changes, the Cardano
-  [hard-fork combinator technology](https://iohk.io/en/blog/posts/2020/05/07/combinator-makes-easy-work-of-shelley-hard-fork/)
+  [hard fork combinator technology](https://iohk.io/en/blog/posts/2020/05/07/combinator-makes-easy-work-of-shelley-hard-fork/)
   ensures a smooth transition to a new protocol while saving the history of the
   previous blocks and not causing any disruptions for end users.
 - **Decentralization** — Cardano is maintained by over 3,000 distributed stake
