links/formatting tweaks

--- a/docs/02-new-to-cardano/04-proof-of-stake.mdx
+++ b/docs/02-new-to-cardano/04-proof-of-stake.mdx
@@ -4,7 +4,7 @@ metaTitle: Proof of stake
 ---
 
 Proof of stake (PoS) is a type of
-[consensus mechanism](https://docs.cardano.org/learn/consensus-explained) or
+[consensus mechanism](/learn/consensus-explained) or
 protocol that uses the amount of stake (or value) held in the system to
 determine consensus. In essence, a consensus protocol is what controls the laws
 and parameters governing the behavior of blockchains. Think of consensus as a
@@ -14,7 +14,7 @@ instead to allow distributed network participants to agree on the _history_ of
 the network captured on the blockchain – to reach consensus on what has
 happened, and continue from a single source of truth.
 
-[Cardano](https://cardano.org/) is built on the ground-breaking PoS consensus
+Cardano is built on the ground-breaking PoS consensus
 protocol
 [Ouroboros](https://iohk.io/en/blog/posts/2022/06/03/from-classic-to-chronos-the-implementations-of-ouroboros-explained/),
 and the first blockchain consensus protocol to be developed through
@@ -26,7 +26,7 @@ experience or availability to keep a node running. These stake pools focus on
 maintenance and hold the combined stake of various stakeholders in a single
 entity.
 
-### How does proof of stake compare to proof of work protocols?
+## How does proof of stake compare to proof of work protocols?
 
 In contrast, proof of work (PoW) is a synchronous protocol that encourages
 miners to compete to be the first who can solve any problems within the block. A
@@ -35,7 +35,7 @@ approach comes at a cost, with increased electricity usage and longer time spans
 to solve problems within the chain. These factors can slow the network down
 significantly and means it is costly to maintain.
 
-### Features of proof of stake
+## Features of proof of stake
 
 One of the key features of PoS is that as a user's value increases, the
 opportunity to maintain the ledger also increases. This means a higher chance to
@@ -48,15 +48,15 @@ their wealth as they go. This approach encourages steady and stable growth of
 the blockchain and reduces the instances of stalled transactions that can
 prevent chain growth.
 
-### Primary advantages of proof of stake
+## Primary advantages of proof of stake
 
 Some of the primary advantages of PoS over PoW include:
 
-- rigorous security protocols are incorporated into a PoS protocol.
+- rigorous security protocols are incorporated into a PoS protocol
 - reduced centralization - the risk of centralization is reduced by issuing
   penalties for selfish practices within the network
 - energy efficiency - energy consumption is extremely efficient as a smaller
   amount of electricity, as well as hardware resources, are needed to produce
-  and run the blockchain.
+  and run the blockchain
 - cost efficiencies - PoS currencies are far more cost-effective than those
   operating on PoW protocols.
