--- a/docs/02-new-to-cardano/06-cardano-tracking-tools.mdx
+++ b/docs/02-new-to-cardano/06-cardano-tracking-tools.mdx
@@ -36,7 +36,7 @@ Here are some other explorers to consider:
 - [Cardanoscan](https://cardanoscan.io/transactions)
 - [Cexplorer](https://cexplorer.io/)
 
-### Exploring assets
+## Exploring assets
 
 Cardano supports multi-asset creation and management. To see a list of created
 assets and tokens, you can use these tools:
@@ -47,7 +47,7 @@ assets and tokens, you can use these tools:
 - [Pool.pm (tokens)](https://pool.pm/tokens)
 - [Cexplorer (tokens)](https://cexplorer.io/token)
 
-### Exploring stake pools
+## Exploring stake pools
 
 To find a list of all registered stake pools, their tickers, pool names, and
 IDs, you can use these tools:
