Improve warnings, copy edits

--- a/docs/02-new-to-cardano/08-types-of-wallets.mdx
+++ b/docs/02-new-to-cardano/08-types-of-wallets.mdx
@@ -3,47 +3,46 @@ title: Types of wallets
 metaTitle: Types of wallets
 ---
 
-A cryptocurrency wallet is a safe and secure place where users can keep their
-digital currencies.
+A blockchain wallet is a safe and secure place where users can keep their
+digital assets.
 
-> _Remember, only a wallet that you have private keys to (a password that
-> provides access to your cryptocurrency) is considered to be safe to store your
-> personal funds. It is highly **not recommended** to store cryptocurrency on
-> exchanges, as this increases the risk of funds loss._
->
-> _Not your keys, not your coins ‒ they say._
+:::warning
 
-Cryptocurrency wallets come in different forms, from desktop and mobile
+Please remember that it's only safe to store your digital assets in a wallet where you control the private keys (the password granting access to your assets). Storing digital assets on exchanges is highly discouraged.
+
+:::
+
+Blockchain wallets come in different forms, from desktop and mobile
 applications to hardware (USB-like) devices and paper wallets. All wallets are
-designed to enable the storage of cryptocurrency and to allow the sending and
-receiving of funds. Technically, cryptocurrency is not stored in the wallet ‒
-its records live on the blockchain, and can be accessed using unique private
+designed to enable the storage of digital assets and to allow the sending and
+receiving of those. Technically, assets are not stored in the wallet ‒
+their records live on the blockchain and can be accessed using unique private
 keys, which grant the right to make transactions. Losing your private keys means
-losing access to your digital funds. That is why it is crucial to keep your keys
+losing access to your digital assets. That is why it is crucial to keep your keys
 safe and offline.
 
 The difference between the wallet types lies in their security and supported
 functionality. Paper wallets are the most secure, for example, but not as
-convenient in use; some wallets support a limited number of currencies, some
+convenient in use; some wallets support a limited number of assets, some
 lack certain features (like delegation, for instance).
 
 Let's take a closer look at the pros and cons of different wallet types:
 
 - **Paper wallets** — these are paper documents that contain public and private
-  keys details. Such documents can be stored in a safe place and are highly
+  key details. Such documents can be stored in a safe place and are highly
   secure as they can’t be compromised via online attacks. Paper wallets are best
-  to use for long-term savings. On the other hand, the funds linked to paper
-  wallets are not possible to operate online (for purchases, for example), as
+  to use for long-term savings. On the other hand, the assets linked to paper
+  wallets are not possible to operate online, as
   they will have to be moved to other wallets first.
-- **Hardware wallets** — these are devices that store cryptocurrencies offline
-  and can be connected to a computer to access the funds. Hardware wallets are
+- **Hardware wallets** — these are devices that store digital assets offline
+  and can be connected to a computer to access them. Hardware wallets are
   secure and their benefit lies in the balance of offline security and
   convenience as they can be carried around and used when needed. The
   disadvantage of the hardware wallet is the risk of device loss or damage.
 - **Online wallets** — these wallets can be commonly set up using a browser.
-  They work through the internet and store cryptocurrency in a certain
+  They work through the internet and store assets in a certain
   application or software. This is convenient as users can send, receive, and
-  use crypto as in any other bank account or payment system. However, online
+  use their digital assets as in any other bank account or payment system. However, online
   wallets are more open to security issues and can be compromised or attacked.
   _Search online for the most secure and suitable wallet; always keep your keys
   offline and use 2FA verification where possible (giving preference to security
@@ -51,29 +50,29 @@ Let's take a closer look at the pros and cons of different wallet types:
 - **Desktop wallets** — these wallets can be downloaded on a personal computer.
   They are secure and convenient in use. Before choosing the best-matching
   solution, it is important to ensure that your computer meets software
-  requirements and that the wallet supports the cryptocurrency you would like to
+  requirements and that the wallet supports the asset you would like to
   work with. Desktop wallets are easy to use, but are not as flexible or
   portable.
 - **Mobile wallets** — these are wallet applications that can be installed
-  directly on a smartphone. Such wallets are simple to install and use and is a
-  good additional option for cryptocurrency storage.
+  directly on a smartphone. Such wallets are simple to install and use and are a
+  good additional option for digital asset storage.
 
-### Where to store ada?
+## Where to store ada?
 
-There are different wallets that support ada. Take a look at some possible options below to choose the one that matches your needs best.
+Different wallets support ada. Take a look at some possible options below to choose the one that matches your needs best.
 
 **Daedalus**
 
 Daedalus is a full node, desktop wallet. Daedalus downloads a full copy of the
 Cardano blockchain and independently validates every transaction in its history.
 This provides maximum security and completely trustless operation, without
-centrally-hosted third party servers. It supports all major desktop operating
+centrally-hosted third-party servers. It supports all major desktop operating
 systems and provides the following features:
 
 - easy installation with one-click setup of bundled Cardano node
 - locally stored wallets and encrypted private keys, not shared with third-party
   servers
-- trustless operation with locally running full Cardano node which independently
+- trustless operation with a locally running full Cardano node which independently
   validates full transaction history of the blockchain
 - supports Cardano network by participating in the Ouroboros protocol
 - wallet backup and restoration using mnemonics
@@ -87,7 +86,7 @@ To install Daedalus, follow these steps:
 1.  First, read
     [system requirements](https://iohk.zendesk.com/hc/en-us/articles/360010496553).
     Please note that Daedalus is a resource-intensive application. If you want
-    to manage ada quickly and easily you can try Yoroi or AdaLite wallets.
+    to manage ada quickly and easily you can try Lace, Nami, Yoroi, or other wallets.
 2.  Visit the official [Daedalus website.](https://daedaluswallet.io/)
 3.  Follow
     [these installation instructions.](https://iohk.zendesk.com/hc/en-us/articles/360011602173-Quick-start-guide#:~:text=Go%20to%20https%3A%2F%2Fdaedaluswallet,Daedalus%20wallet%20on%20your%20Machine.)
